Fri Feb  3 11:45:23 1995  Theodore Y. Ts'o  (tytso@dcl)

	* kdc_hammer.c (get_server_key): Add keytype parameter

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Tue Nov  8 17:53:40 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdc5_hammer.c (get_server_key): Use the published interface to
		call krb5_string_to_key().

Sun Oct 23 01:44:37 1994    (tytso@rsx-11)

	* kdc5_hammer.c (main): Allow kdc_hammer to be called on an
		arbitrary realm.

Tue Oct  4 17:24:36 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdc_hammer.c (get_server_key): Add widen.h and narrow.h around
		declaration to make argument types be widened.

Fri Sep 30 22:08:45 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdc_hammer.c: Add placeholder for magic number

Thu Sep 29 22:59:09 1994  Theodore Y. Ts'o  (tytso@dcl)

 	* Makefile.in: Relink executable when libraries change


Thu Sep 15 17:38:51 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdc_hammer.c (get_server_key): index() -> strchr()
